Update image paths and favicon references across multiple HTML files to use the assets directory, and remove obsolete image files.

--- a/adventures.html
+++ b/adventures.html
@@ -21,10 +21,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Adventures by Sitesh">
     <meta name="twitter:description" content="Map of adventure sport locations around India attempted by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_adventures.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_adventures.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/adventures">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>Adventures by Sitesh</title>
 </head>
