--- a/chromeextensions.html
+++ b/chromeextensions.html
@@ -22,10 +22,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Chrome Extensions by Sitesh">
     <meta name="twitter:description" content="List of Chrome Extensions developed by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_chromeextensions.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_chromeextensions.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/chromeextensions">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>Chrome Extensions by Sitesh</title>
 
