--- a/cities.html
+++ b/cities.html
@@ -21,10 +21,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Cities traveled by Sitesh">
     <meta name="twitter:description" content="Map of cities travelled by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_cities.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_cities.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/cities">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>Cities traveled by Sitesh</title>
 
