--- a/classpass.html
+++ b/classpass.html
@@ -21,10 +21,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="ClassPass workouts by Sitesh">
     <meta name="twitter:description" content="Map of ClassPass studios where Sitesh Shrivastava has worked out">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_classpass.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_classpass.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/classpass">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>ClassPass workouts by Sitesh</title>
 
