--- a/flights.html
+++ b/flights.html
@@ -22,10 +22,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Flights taken by Sitesh">
     <meta name="twitter:description" content="Map of flight routes taken by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_flights.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_flights.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/flights">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>Flights taken by Sitesh</title>
 
@@ -1500,9 +1500,9 @@
                       extraCssText: 'background: transparent; box-shadow: none;' // Use CSS class styles
                  },
                  globe: {
-                     baseTexture: 'images/world.topo.bathy.200401.jpg',
-                     heightTexture: 'images/bathymetry_bw_composite_4k.jpg',
-                     environment: 'images/starfield.jpg',
+                     baseTexture: 'assets/world.topo.bathy.200401.jpg',
+                     heightTexture: 'assets/bathymetry_bw_composite_4k.jpg',
+                     environment: 'assets/starfield.jpg',
  
                      shading: 'realistic',
                      realisticMaterial: {
@@ -1529,7 +1529,7 @@
                              intensity: 0.5 // Ambient light
                          },
                          ambientCubemap: {
-                             texture: 'images/lake.hdr', // Environment map for reflections
+                             texture: 'assets/lake.hdr', // Environment map for reflections
                              diffuseIntensity: 0.5,
                              specularIntensity: 1
                          }
@@ -1548,7 +1548,7 @@
                      },
                     layers: [{ // Add a base layer for visual appeal if needed
                         type: 'blend',
-                        texture: 'images/night.jpg', // Optional night texture
+                        texture: 'assets/night.jpg', // Optional night texture
                         shading: 'lambert',
                         distance: 5 // Adjust distance if using night texture
                     }]
