--- a/trendbots.html
+++ b/trendbots.html
@@ -22,10 +22,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Internet Trend Bots by Sitesh">
     <meta name="twitter:description" content="List of internet trend bots for social media feed developed by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_trendbots.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_trendbots.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/trendbots">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
     
     <title>Internet Trend Bots by Sitesh</title>
 
