--- a/uber.html
+++ b/uber.html
@@ -22,10 +22,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Uber rides by Sitesh">
     <meta name="twitter:description" content="Map of uber rides taken by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_uber.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_uber.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/uber">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>Uber rides by Sitesh</title>
 
