--- a/countries.html
+++ b/countries.html
@@ -21,10 +21,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Countries visited by Sitesh">
     <meta name="twitter:description" content="Map of countries visited by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_countries.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_countries.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com/countries">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>Countries visited by Sitesh</title>
 
