--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <meta name="twitter:site" content="@siteshps">
     <meta name="twitter:title" content="Code by Sitesh">
     <meta name="twitter:description" content="Code, projects & visualizations by Sitesh Shrivastava">
-    <meta name="twitter:image" content="https://code.siteshshrivastava.com/images/preview_index.png">
+    <meta name="twitter:image" content="https://code.siteshshrivastava.com/assets/preview_index.png">
 
     <link rel="canonical" href="https://code.siteshshrivastava.com">
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/favicon.ico"/>
 
     <title>Code by Sitesh Shrivastava</title>
 
