--- a/flights.html
+++ b/flights.html
@@ -12,6 +12,7 @@
     </script>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Map of flight routes taken by Sitesh Shrivastava">
     <meta name="keywords" content="Map, Flights, Travel">
