--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <link rel="canonical" href="https://code.siteshshrivastava.com">
     <link rel="shortcut icon" href="assets/favicon.ico"/>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700|Nunito:400,700&display=swap" rel="stylesheet">
 
     <title>Code by Sitesh Shrivastava</title>
 
@@ -32,31 +33,37 @@
         body {
             margin: 0;
             padding: 0;
-            background: #f9f9f9;
-            color: #333;
-            font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+            background: linear-gradient(135deg, #e3f6f5 0%, #fffbe6 100%);
+            color: #4b3f2f;
+            font-family: 'Quicksand', 'Nunito', Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
             line-height: 1.5;
             display: flex;
             flex-direction: column;
             height: 100vh;
+            /* Optional: subtle clouds background */
+            background-image: url('https://www.transparenttextures.com/patterns/clouds.png');
         }
         header {
             width: 100%;
             text-align: center;
-            padding: 10px 0;
-            border-bottom: 1px solid #ddd;
-            background: #fff;
+            padding: 18px 0 10px 0;
+            border-bottom: 2px solid #b5c9c3;
+            background: #f7fbe8;
+            box-shadow: 0 2px 8px rgba(180, 200, 180, 0.08);
         }
         header h1 {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
-            color: #007acc;
+            color: #5a8c6d;
             margin: 0;
+            letter-spacing: 2px;
+            text-shadow: 1px 2px 0 #e3f6f5;
         }
         header p {
-            color: #555;
-            font-size: 14px;
+            color: #7b6f57;
+            font-size: 15px;
             margin: 0;
+            font-family: 'Nunito', sans-serif;
         }
         .main {
             display: flex;
@@ -65,42 +72,135 @@
             flex-direction: column;
         }
         .sidebar {
-            min-width: 150px;
-            background: #fff;
-            border-right: 1px solid #ddd;
-            padding: 1rem 0;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            width: max-content;
+            min-width: 140px;
+            max-width: 100vw;
+            background: #f7fbe8;
+            border-right: 2px solid #b5c9c3;
+            /* Remove padding here, move to .sidebar-content */
+            box-shadow: 3px 0 12px rgba(180, 200, 180, 0.10);
             display: flex;
             flex-direction: column;
+            justify-content: flex-start;
+            border-top-right-radius: 24px;
+            border-bottom-right-radius: 24px;
+            position: relative;
+            transition: width 0.2s, min-width 0.2s;
+        }
+        .sidebar.minimized {
+            min-width: 44px;
+            width: 44px;
+            overflow-x: hidden;
+        }
+        .sidebar-toggle {
+            position: absolute;
+            top: 12px;
+            left: 12px;
+            width: 28px;
+            height: 28px;
+            background: #e3f6f5;
+            border: 2px solid #b5c9c3;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
             justify-content: center;
+            cursor: pointer;
+            z-index: 2;
+            transition: background 0.2s, border 0.2s;
+            box-shadow: 1px 2px 6px rgba(180, 200, 180, 0.10);
+        }
+        .sidebar-toggle:hover {
+            background: #c8e6c9;
+            border-color: #a3c9a8;
+        }
+        .sidebar-toggle span {
+            font-size: 18px;
+            color: #5a8c6d;
+            user-select: none;
+            transition: transform 0.2s;
+        }
+        .sidebar.minimized .sidebar-toggle span {
+            transform: rotate(180deg);
+        }
+        .sidebar-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            padding: 2.8rem 0 1.2rem 0; /* top padding leaves space for toggle */
+            height: 100%;
+            width: 100%;
+        }
+        .sidebar.minimized .sidebar-content {
+            padding: 2.2rem 0 0.5rem 0;
+        }
+        .sidebar .tab {
+            padding: 1rem 1.5rem;
+            cursor: pointer;
+            color: #5a8c6d;
+            text-align: left;
+            font-size: 17px;
+            border-bottom: 1px dashed #c8d6c1;
+            background: transparent;
+            font-family: 'Quicksand', 'Nunito', sans-serif;
+            border-radius: 0 18px 18px 0;
+            margin: 0 0.5rem;
+            transition: background 0.3s, color 0.3s, box-shadow 0.2s, opacity 0.2s, padding 0.2s;
+            box-shadow: none;
+            position: relative;
+            white-space: nowrap;
+        }
+        .sidebar.minimized .tab {
+            opacity: 0;
+            pointer-events: none;
+            height: 0;
+            padding: 0;
+            margin: 0;
+            border: none;
+        }
+        .sidebar .tab:hover, .sidebar .tab.active {
+            background: linear-gradient(90deg, #e3f6f5 60%, #c8e6c9 100%);
+            color: #3e5c4b;
+            box-shadow: 2px 4px 12px rgba(90, 140, 109, 0.07);
+            border-bottom: 2px solid #a3c9a8;
+        }
+        .sidebar .tab.active::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 18px;
+            width: 6px;
+            height: 24px;
+            background: #a3c9a8;
+            border-radius: 0 6px 6px 0;
         }
         @media (min-width: 768px) {
             .main {
                 flex-direction: row;
             }
         }
-        .sidebar .tab {
-            padding: 1rem;
-            cursor: pointer;
-            color: #007acc;
-            text-align: left;
-            font-size: 16px;
-            border-bottom: 1px solid #ddd;
-            transition: background 0.3s;
-        }
-        .sidebar .tab:hover, .sidebar .tab.active {
-            background: #f0f0f0;
-            color: #0056b3;
-        }
         .content {
             flex: 1;
             padding: 0;
             overflow: hidden;
+            background: rgba(255,255,255,0.7);
+            border-radius: 24px 0 0 24px;
+            box-shadow: 0 2px 12px rgba(180, 200, 180, 0.10);
         }
         iframe {
             width: 100%;
             height: 100%;
             border: none;
+            border-radius: 0 0 24px 0;
+            background: transparent;
+        }
+        /* Optional: add a whimsical touch to scrollbar */
+        ::-webkit-scrollbar {
+            width: 10px;
+            background: #e3f6f5;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #b5c9c3;
+            border-radius: 8px;
         }
     </style>
 
@@ -117,21 +217,32 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             showTab('tab1', 'countries.html');
+            // Sidebar toggle logic
+            const sidebar = document.querySelector('.sidebar');
+            const toggleBtn = document.querySelector('.sidebar-toggle');
+            toggleBtn.addEventListener('click', () => {
+                sidebar.classList.toggle('minimized');
+            });
         });
     </script>
 </head>
 <body>
 <div class="main">
     <div class="sidebar">
-        <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
-        <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
-        <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
-        <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'adventures.html')">Adventures</div>
-        <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'classpass.html')">Classpass</div>
-        <div class="tab" data-tab="tab6" onclick="showTab('tab6', 'uber.html')">Uber</div>
-        <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Follow: Trend bots</div>
-        <div class="tab" data-tab="tab9" onclick="showTab('tab9', 'chromeextensions.html')">Use: Chrome Extensions</div>
-        <div class="tab" data-tab="tab8" onclick="showTab('tab8', '/Hangman')">Play: Hangman</div>
+        <div class="sidebar-toggle" title="Toggle sidebar">
+            <span>☰</span>
+        </div>
+        <div class="sidebar-content">
+            <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
+            <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
+            <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
+            <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'adventures.html')">Adventures</div>
+            <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'classpass.html')">Classpass</div>
+            <div class="tab" data-tab="tab6" onclick="showTab('tab6', 'uber.html')">Uber</div>
+            <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Follow: Trend bots</div>
+            <div class="tab" data-tab="tab9" onclick="showTab('tab9', 'chromeextensions.html')">Use: Chrome Extensions</div>
+            <div class="tab" data-tab="tab8" onclick="showTab('tab8', '/Hangman')">Play: Hangman</div>
+        </div>
     </div>
     <div class="content">
         <iframe id="content-frame" src=""></iframe>
