--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
             <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
             <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
             <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'adventures.html')">Adventures</div>
-            <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'classpass.html')">Classpass</div>
+            <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'classpass.html')">ClassPass</div>
             <div class="tab" data-tab="tab6" onclick="showTab('tab6', 'uber.html')">Uber</div>
             <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Follow: Trend bots</div>
-            <div class="tab" data-tab="tab9" onclick="showTab('tab9', 'chromeextensions.html')">Use: Chrome Extensions</div>
-            <div class="tab" data-tab="tab8" onclick="showTab('tab8', '/Hangman')">Play: Hangman</div>
+            <div class="tab" data-tab="tab8" onclick="showTab('tab8', 'chromeextensions.html')">Use: Chrome Extensions</div>
+            <div class="tab" data-tab="tab9" onclick="showTab('tab9', '/Hangman')">Play: Hangman</div>
         </div>
     </div>
     <div class="content">
