Add booking.html for visualizing Booking.com hotel stays and update index.html with new tab for Booking.com

--- a/index.html
+++ b/index.html
@@ -236,12 +236,13 @@
             <div class="tab active" data-tab="tab1" onclick="showTab('tab1', 'countries.html')">Countries</div>
             <div class="tab" data-tab="tab2" onclick="showTab('tab2', 'cities.html')">Cities</div>
             <div class="tab" data-tab="tab3" onclick="showTab('tab3', 'flights.html')">Flights</div>
-            <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'adventures.html')">Adventures</div>
+            <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'uber.html')">Uber</div>
             <div class="tab" data-tab="tab5" onclick="showTab('tab5', 'classpass.html')">ClassPass</div>
-            <div class="tab" data-tab="tab6" onclick="showTab('tab6', 'uber.html')">Uber</div>
-            <div class="tab" data-tab="tab7" onclick="showTab('tab7', 'trendbots.html')">Follow: Trend bots</div>
-            <div class="tab" data-tab="tab8" onclick="showTab('tab8', 'chromeextensions.html')">Use: Chrome Extensions</div>
-            <div class="tab" data-tab="tab9" onclick="showTab('tab9', '/Hangman')">Play: Hangman</div>
+            <div class="tab" data-tab="tab4" onclick="showTab('tab4', 'adventures.html')">Adventures</div>
+            <div class="tab" data-tab="tab6" onclick="showTab('tab6', 'booking.html')">Booking.com</div>
+            <div class="tab" data-tab="tab8" onclick="showTab('tab8', 'trendbots.html')">Follow: Trend bots</div>
+            <div class="tab" data-tab="tab9" onclick="showTab('tab9', 'chromeextensions.html')">Use: Chrome Extensions</div>
+            <div class="tab" data-tab="tab10" onclick="showTab('tab10', '/Hangman')">Play: Hangman</div>
         </div>
     </div>
     <div class="content">
