--- a/flights.html
+++ b/flights.html
@@ -12,7 +12,7 @@
     </script>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <meta name="description" content="Map of flight routes taken by Sitesh Shrivastava">
     <meta name="keywords" content="Map, Flights, Travel">
@@ -36,9 +36,8 @@
     <script src="https://cdn.jsdelivr.net/npm/echarts-gl@2/dist/echarts-gl.min.js"></script>
     <style>
         html, body {
-            width: 100vw;
-            height: 100vh;
-            min-height: 100vh;
+            width: 100%;
+            height: 100%;
             margin: 0;
             padding: 0;
             overflow: hidden;
@@ -46,15 +45,11 @@
             touch-action: none;
         }
         #globeViz {
-            position: fixed;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 100vw;
-            height: 100vh;
-            min-height: 100vh;
-            max-width: 100vw;
-            max-height: 100vh;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -181,12 +176,7 @@
 
         // --- Responsive Globe Zoom and Centering ---
         function getResponsiveDistance() {
-            const w = window.innerWidth;
-            const h = window.innerHeight;
-            // Adjust distance based on the smaller dimension for best fit
-            if (Math.min(w, h) < 500) return 320; // Small mobile screens
-            if (Math.min(w, h) < 800) return 260; // Tablets/small laptops
-            return 240; // Desktops
+            return Math.min(window.innerWidth, window.innerHeight);
         }
 
         function setGlobeOptionWithDistance(myChart, option) {
@@ -261,11 +251,8 @@
                         },
                         viewControl: {
                             autoRotate: true,
-                            autoRotateSpeed: 10, // Slower rotation speed
-                            targetCoord: [-122.431297, 37.773972], // Initial view target (e.g., Beijing) - adjust as needed
-                            zoomSensitivity: 1.0, // Adjust zoom speed
-                            rotateSensitivity: 1.0, // Adjust rotation speed
-                            distance: getResponsiveDistance() // Set initial distance responsively
+                            autoRotateSpeed: 10,
+                            targetCoord: [-122.431297, 37.773972]
                         },
                         atmosphere: {
                             show: true, // Show atmospheric glow
