Traveled to Hong Kong

--- a/countries.html
+++ b/countries.html
@@ -87,6 +87,7 @@
             ISL: {fillKey: "travelled"},
             PRT: {fillKey: "travelled"},
             VAT: {fillKey: "travelled"},
+            HKD: {fillKey: "travelled"},
         }
     });
     document.body.querySelector('h3').innerText = `World Travel Stats (${Object.keys(window.map.options.data).length} / ${window.Datamap.prototype.worldTopo.objects.world.geometries.length})`;
