Move China to end of visited list

--- a/countries.html
+++ b/countries.html
@@ -88,6 +88,7 @@
             PRT: {fillKey: "travelled"},
             VAT: {fillKey: "travelled"},
             HKG: {fillKey: "travelled"},
+            CHN: {fillKey: "travelled"},
         }
     });
     document.body.querySelector('h3').innerText = `World Travel Stats (${Object.keys(window.map.options.data).length} / ${window.Datamap.prototype.worldTopo.objects.world.geometries.length})`;
