--- a/countries.html
+++ b/countries.html
@@ -90,6 +90,7 @@
             HKG: {fillKey: "travelled"},
             CHN: {fillKey: "travelled"},
             SGP: {fillKey: "travelled"},
+            MYS: {fillKey: "travelled"},
         }
     });
     document.body.querySelector('h3').innerText = `World Travel Stats (${Object.keys(window.map.options.data).length} / ${window.Datamap.prototype.worldTopo.objects.world.geometries.length})`;
