2025 year end update to travel maps data

--- a/countries.html
+++ b/countries.html
@@ -58,6 +58,9 @@
             map = new Datamap({
                 element: document.getElementById('container'),
                 projection: 'mercator',
+                geographyConfig: {
+                    highlightOnHover: false
+                },
                 fills: {
                     defaultFill: 'skyblue',
                     travelled: 'darkgreen'
